[gd_scene load_steps=8 format=3 uid="uid://qvtmi6uq4dly"]

[ext_resource type="Texture2D" uid="uid://gwt0clgxd8y1" path="res://scenes/rift/enter_rift/clock_base.png" id="1_abiju"]
[ext_resource type="Script" path="res://scenes/rift/enter_rift/clock.gd" id="1_j1aic"]
[ext_resource type="AudioStream" uid="uid://b0wn7wa670pod" path="res://scenes/player/click.wav" id="3_21l7k"]
[ext_resource type="AudioStream" uid="uid://detffedvvae4n" path="res://scenes/player/rewind.wav" id="4_y77i6"]

[sub_resource type="Animation" id="Animation_88cnt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Clock:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_nkr02"]
resource_name = "rift"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Clock:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.596078)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rw4ak"]
_data = {
"RESET": SubResource("Animation_88cnt"),
"rift": SubResource("Animation_nkr02")
}

[node name="EnterRift" type="CanvasLayer"]
script = ExtResource("1_j1aic")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -767.0
offset_top = -747.0
offset_right = 1552.0
offset_bottom = 1455.0

[node name="Clock" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(428, 317)
texture = ExtResource("1_abiju")

[node name="LongHand" type="ColorRect" parent="Clock"]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 278.0
pivot_offset = Vector2(10, 10)

[node name="Shorthand" type="ColorRect" parent="Clock"]
offset_left = -15.0
offset_top = -9.0
offset_right = 15.0
offset_bottom = 265.0
rotation = 3.78387
pivot_offset = Vector2(15, 10)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rw4ak")
}

[node name="AudClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_21l7k")
volume_db = -5.0

[node name="AudRewind" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_y77i6")
volume_db = -15.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
